report index layout

--- a/ConstructionMS/Web.config
+++ b/ConstructionMS/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ConstructionMS-20191001114045.mdf;Initial Catalog=aspnet-ConstructionMS-20191001114045;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CMSEntities" connectionString="metadata=res://*/CMS.csdl|res://*/CMS.ssdl|res://*/CMS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FOPG83K;initial catalog=CMS;user id=sa;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="CMSEntities" connectionString="metadata=res://*/CMS.csdl|res://*/CMS.ssdl|res://*/CMS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-S2B75M7;initial catalog=CMS;user id=sa;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
