--- a/ConstructionMS/ConstructionMS.csproj
+++ b/ConstructionMS/ConstructionMS.csproj
@@ -280,6 +280,7 @@
       <DependentUpon>CMS.edmx</DependentUpon>
       <LastGenOutput>CMS.cs</LastGenOutput>
     </Content>
+    <Content Include="Content\admin\bg.jpg" />
     <Content Include="Content\admin\concept-master\assets\images\avatar-1.jpg" />
     <Content Include="Content\admin\concept-master\assets\images\avatar-2.jpg" />
     <Content Include="Content\admin\concept-master\assets\images\avatar-3.jpg" />
@@ -743,6 +744,7 @@
     <Content Include="Content\admin\startbootstrap-sb-admin-2-gh-pages\img\images %281%29.jpeg" />
     <Content Include="Content\admin\startbootstrap-sb-admin-2-gh-pages\img\images.jpeg" />
     <Content Include="Content\admin\startbootstrap-sb-admin-2-gh-pages\img\ws.jpg" />
+    <Content Include="Content\admin\vlxd.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
